<resources>
    <string name="app_name">MyStudyPlan</string>
    <string name="asignatura">Asignatura</string>
    <string name="tema">Tema</string>
    <string name="cat_lists_title">Lists</string>
    <string name="cat_lists_description">
    Lists are continuous, vertical indexes of text or images.
  </string>
    <string name="mtrl_list_item_clicked">List item clicked</string>
    <string name="mtrl_list_item_one_line">One Line Item</string>
    <string name="mtrl_list_item_two_line">Two Line Item</string>
    <string name="mtrl_list_item_three_line">Three Line Item</string>
    <string name="mtrl_list_item_secondary_text">Secondary Text</string>
    <string name="mtrl_list_item_tertiary_text">Tertiary Text</string>
    <string name="submit">Añadir</string>
    <string name="a_adir_asingatura">Añadir Asignatura</string>
    <string name="planning">Planning</string>
    <string name="fecha_repaso">fecha repaso</string>
    <string name="Repasos">Repasos</string>
    <string name="Exámenes">Exámenes</string>
    <string name="temas">Temas</string>
    <string name="Configuracion">Configuración</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="edici_n_de_entradas">Edición de entradas</string>
    <string name="editar_tema">Editar tema</string>
    <string name="eliminar_tema">Eliminar tema</string>
    <string name="eliminar_asignatura">Eliminar asignatura</string>
    <string name="imagen_carretera">Imagen para escribir una frase</string>
    <string name="a_ade_tu_frase">Añade tu frase</string>
    <string name="escribe_el_tema">Escribe el tema</string>
    <string name="esta_acci_n_es_irreversible">Esta acción es irreversible</string>
    <string name="eliminar">Eliminar</string>
    <string name="icono_que_indica_que_existe_fecha_de_examen">icono que indica que existe fecha de examen</string>
    <string name="fecha_inicio">fecha inicio</string>
</resources>