<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:orderInCategory="0"
        android:id="@+id/navigation_temas"
        android:icon="@drawable/ic_baseline_subject_24"
        android:title="@string/temas" />
    <item
        android:orderInCategory="1"
        android:id="@+id/navigation_repasos"
        android:icon="@drawable/ic_round_schedule_24"
        android:title="@string/Repasos" />
    <item
        android:orderInCategory="2"
        android:id="@+id/navigation_examenes"
        android:icon="@drawable/ic_baseline_calendar_today_24"
        android:title="@string/Exámenes" />
    <item
        android:orderInCategory="3"
        android:id="@+id/navigation_config"
        android:icon="@drawable/ic_baseline_settings_applications_24"
        android:title="@string/Configuracion" />
</menu>