<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context=".ConfigFragment" >

<!--TODO refactorizar estilos-->
    <TextView
        android:id="@+id/config_dato_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edici_n_de_entradas"
        android:typeface="monospace"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        android:textSize="9pt"/>

    <TextView
        android:id="@+id/editarTema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/editar_tema" />

    <TextView
        android:id="@+id/eliminarTema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/eliminar_tema" />

    <TextView
        android:id="@+id/eliminarAsignatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/eliminar_asignatura" />


</LinearLayout>