<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listStudy"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp">
    <LinearLayout
        android:id="@+id/llStudyContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvItemAsignatura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asignatura"
            android:textStyle="bold"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/tvItemTema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/tema"/>
        <TextView
            android:id="@+id/tvItemFechaInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/fecha_repaso"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>

